# codeinspector

./: .WolframResources  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  HowToBuild.md  PacletInfo.m  README.md
CodeInspector/: PacletInfo.m  PacletInfo.wl.in
CodeInspector/Documentation/English/Guides/: CodeInspector.nb
CodeInspector/Documentation/English/ReferencePages/Symbols/: CodeInspect.nb  CodeInspectSummarize.nb  InspectedBoxObject.nb  InspectedFileObject.nb  InspectedLineObject.nb  InspectedStringObject.nb  InspectionObject.nb
CodeInspector/Documentation/English/Tutorials/: CodeInspectorTutorial.nb  ReleaseNotes.nb  WritingAdditionalRules.nb
CodeInspector/FrontEnd/Palettes/: CodeAnalysisOptions.nb  CodeAnalysisSuppressions.nb
CodeInspector/FrontEnd/TextResources/: CodeInspector.tr
CodeInspector/Generate/: MakeCodeAnalysisOptionsPalette.wl  MakeLinterUIDockedCell.wl  MakeLinterUISuppressionPalette.wl  PackPaclet.wl
CodeInspector/Kernel/: AbstractRules.wl  AggregateRules.wl  Boxes.wl  BracketMismatches.wl  CodeInspector.wl  ConcreteRules.wl  DisabledRegions.wl  External.wl  Format.wl  ImplicitTimes.wl  ImplicitTokens.wl  LinterUI.wl  MessageStack.wl  Summarize.wl  SuppressedRegions.wl  TokenRules.wl  Utils.wl
Lint/: Format.wl  ImplicitMultiplication.wl  ImplicitTimes.wl  Lint.wl  PacletInfo.m  Report.wl  Rules.wl  Run.wl  Utils.wl
Lint/Documentation/English/ReferencePages/: LintFile.nb  LintFileReport.nb  LintString.nb  LintStringReport.nb
Lint/Documentation/English/ReferencePages/Symbols/: Lint.nb  LintFile.nb  LintFileReport.nb  LintString.nb  LintStringReport.nb  LintedLine.nb
Lint/Documentation/English/Tutorials/: LintExamples.nb  LintTutorial.nb  WritingAdditionalRules.nb
Lint/FrontEnd/StyleSheets/: Lint.nb
Lint/Generate/: PackPaclet.wl
Lint/Kernel/: AbstractRules.wl  AggregateRules.wl  Boxes.wl  ConcreteRules.wl  External.wl  Folds.wl  Format.wl  ImplicitTimes.wl  Lint.wl  Report.wl  Rules.wl  Utils.wl
Tests/: AbstractRules.mt  AggregateRules.mt  CodeInspector.mt  CodeInspectorEyeballTests.nb  CodeInspectorNotes.nb  ConcreteRules.mt  Confirm.mt  EyeballTests.nb  Lint.mt  LintEyeballTests.nb  LintNotes.nb  TestSuite.mt  TokenRules.mt
Tests/files/: pacletinfo.m  sample.wl
WolframLanguageSyntax/Data/: AnalyzableMessagePositions.wl  AnalyzableMessages.wl  BadSymbols.wl  BuiltinFunctions.wl  Constants.wl  ExperimentalSymbols.wl  FreeCharacters.wl  FreeLongNames.wl  ObsoleteSymbols.wl  Options.wl  SessionSymbols.wl  SpecialCharacters.wl  SpecialLongNames.wl  SystemCharacters.wl  SystemLongNames.wl  UndocumentedCharacters.wl  UndocumentedLongNames.wl  UndocumentedSymbols.wl  UnsupportedCharacters.wl  UnsupportedLongNames.wl
cmake/: PackPaclet.cmake
docs/: comments.md  compatibility.md  disabled-regions.md  docs.md  explanations.md  formatting.md  suppressed.md
scripts/: Generate.wl  re_build_CodeInspector.xml  re_build_Lint.xml
